# Multi-Emotion-Recognition

./: README.md  pyproject.toml
configs/: iemocap_cmca_maff.yaml
multi_emo/: __init__.py
scripts/: prepare_iemocap_metadata.py
src/multi_emo/: __init__.py  config.py  data.py  evaluate.py  metrics.py  models.py  preprocessing.py  splits.py  train.py
tests/: test_models.py  test_pipeline.py  test_tokenizer.py
