[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-emo"
version = "0.1.0"
description = "PyTorch reproduction scaffold for CMCA + MAFF multimodal emotion recognition."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "PyYAML",
  "torch",
]

[project.optional-dependencies]
audio = ["librosa", "soundfile"]
pretrained = ["transformers", "torchvision"]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
